--- a/src/govuk/components/accordion/_index.scss
+++ b/src/govuk/components/accordion/_index.scss
@@ -310,15 +310,28 @@
       vertical-align: middle;
     }
 
-    // High contrast / user colour adjustments
-    // When adjustments are active the inner button content is not visible.
-    // On hover add underline to toggle text to add extra affordance as icon colour changes on pseudo element are not respected.
-    // On focus add transparency to background so content is visible
-    @media screen and (forced-colors: active), (-ms-high-contrast: active) {
-      .govuk-accordion__section-button:hover,
-      .govuk-accordion__show-all:hover {
-        background: transparent;
-
+    // Background colour adjustment when user changes colours in Firefox
+    //
+    // When user changes colours in Firefox, text colour inside <button> is always black
+    // (regardless of the custom colours the user has set). This is fine when the text in the
+    // button is not nested inside another element because when user changes colours in Firefox,
+    // the immediate background colour of buttons is always white (again, regardless of user's
+    // custom colours).
+    //
+    // However, when the text inside <button> is wrapped inside another element AND that element
+    // sets a background colour, the text colour is still black but the background of that nested
+    // element gets the user's custom background colour. When the custom background is a lighter
+    // hue, the contrast might be sufficient. But if the user's custom background colour is a
+    // darker colour, the contrast with the text might not be sufficient.
+    //
+    // To ensure sufficient contrast, override the background colour set by the focus state on the
+    // nested elements to be transparent.
+    //
+    // Also override the background colour of the Show/Hide chevrons which set a background colour
+    // on hover.
+    @media screen and (forced-colors: active) {
+      .govuk-accordion__show-all:hover,
+      .govuk-accordion__section-button:hover {
         .govuk-accordion-nav__chevron {
           background-color: transparent;
         }
