--- a/src/govuk/components/pagination/template.njk
+++ b/src/govuk/components/pagination/template.njk
@@ -5,7 +5,12 @@
   <ul class="govuk-pagination__list">
     {%- if params.previous %}
       <li class="govuk-pagination__item  govuk-pagination__item--prev">
-        <a class="govuk-pagination__link" href="{{ params.previous.href }}">{{ params.previous.text }}</a>
+          <a class="govuk-pagination__link" href="{{ params.previous.href }}">
+              <svg class="govuk-pagination__icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
+                <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
+              </svg>
+              {{ params.previous.text }}
+        </a>
       </li>
     {% endif -%}
 
@@ -23,7 +28,11 @@
 
     {%- if params.next %}
       <li class="govuk-pagination__item  govuk-pagination__item--next">
-        <a class="govuk-pagination__link" href="{{ params.next.href }}">{{ params.next.text }}</a>
+        <a class="govuk-pagination__link" href="{{ params.next.href }}">{{ params.next.text }}
+          <svg class="govuk-pagination__icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewBox="0 0 17 13">
+            <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
+          </svg>
+        </a>
       </li>
     {% endif -%}
   </ul>
