--- a/src/govuk/components/footer/_index.scss
+++ b/src/govuk/components/footer/_index.scss
@@ -145,29 +145,29 @@
   }
 
   .govuk-footer__navigation {
+    box-sizing: border-box;
+    display: flex;
     margin-right: -$govuk-gutter-half;
     margin-left: -$govuk-gutter-half;
-  }
-
-  @supports (display: grid) {
-    .govuk-footer__navigation {
-      $minimum-column-size: 250px;
-      display: grid; // Support: Grid
-      grid-template-columns: repeat(auto-fit, minmax($minimum-column-size, 1fr)); // Support: Grid
-    }
+    flex-wrap: wrap;
   }
 
   .govuk-footer__section {
+    box-sizing: inherit;
     display: inline-block;
-    margin-right: $govuk-gutter-half;
+    width: (100% / 3);
     margin-bottom: $govuk-gutter;
-    margin-left: $govuk-gutter-half;
+    padding-right: $govuk-gutter-half;
+    padding-left: $govuk-gutter-half;
     vertical-align: top;
+    flex-grow: 1;
+    flex-shrink: 1;
   }
 
   @include govuk-media-query ($from: desktop) {
     .govuk-footer__section--span-2 {
-      grid-column: span 2; // Support: Grid
+      flex-grow: 0;
+      width: (2 * 100% / 3);
     }
 
     .govuk-footer__section--span-2 .govuk-footer__list {
@@ -175,7 +175,8 @@
     }
 
     .govuk-footer__section--span-3 {
-      grid-column: span 3; // Support: Grid
+      flex-grow: 0;
+      width: 100%;
     }
 
     .govuk-footer__section--span-3 .govuk-footer__list {
