Use single column footer on mobile viewports
We want the footer to switch from a multi-section
multi-column affair, to a one-section-per-row single-column-per-section
layout on mobile.

This commit adds a media query so that the switch
happens at the tablet breakpoint.

However, there's lots of space in between the mobile layout and the
desktop layout for all sorts of responsive designs, which this commit
eschews; so we might want to revisit this.

--- a/src/govuk/components/footer/_index.scss
+++ b/src/govuk/components/footer/_index.scss
@@ -155,16 +155,20 @@
   .govuk-footer__section {
     box-sizing: inherit;
     display: inline-block;
-    width: (100% / 3);
+    width: 100%;
     margin-bottom: $govuk-gutter;
     padding-right: $govuk-gutter-half;
     padding-left: $govuk-gutter-half;
     vertical-align: top;
     flex-grow: 1;
     flex-shrink: 1;
+
+    @include govuk-media-query ($from: tablet) {
+      width: (100% / 3);
+    }
   }
 
-  @include govuk-media-query ($from: desktop) {
+  @include govuk-media-query ($from: tablet) {
     .govuk-footer__section--span-2 {
       flex-grow: 0;
       width: (2 * 100% / 3);
