Add floats and clearfix for IE8
Adds clearfix and `float: left`, mainly for IE8, which doesn't support
flexbox.

Using this with flexbox is okay, because `display: flex` causes flex
items to ignore floats and clears [[1]].

This makes our footer work even more like our page "grids".

[1]: https://www.w3.org/TR/css-flexbox-1/#flex-containers

--- a/src/govuk/components/footer/_index.scss
+++ b/src/govuk/components/footer/_index.scss
@@ -145,6 +145,7 @@
   }
 
   .govuk-footer__navigation {
+    @include govuk-clearfix;
     box-sizing: border-box;
     display: flex;
     margin-right: -$govuk-gutter-half;
@@ -159,6 +160,7 @@
     margin-bottom: $govuk-gutter;
     padding-right: $govuk-gutter-half;
     padding-left: $govuk-gutter-half;
+    float: left;
     vertical-align: top;
     flex-grow: 1;
     flex-shrink: 1;
