--- a/src/govuk/components/pagination/template.njk
+++ b/src/govuk/components/pagination/template.njk
@@ -1,84 +1,61 @@
-{% if params.results.type %}
-  {% set type = params.results.type %}
-{% else %}
-  {# If no type is defined, set it to 'results' #}
-  {% set type = "results" %}
-{% endif %}
+{% set type = params.results.type | default("results") -%}
 
-{% if params.next.description %}
-  {% set block = " govuk-pagination__list--block" %}
-{% else %}
-  {% set block = "" %}
-{% endif %}
 <nav class="govuk-pagination {{- ' ' + params.classes if params.classes}}" id="pagination-label" aria-label="{{type}} navigation">
 
-  <ul class="govuk-pagination__list{{block}}">
-    {%- if params.previous and params.next.description  %}
-      <li class="govuk-pagination__item  govuk-pagination__item--prev govuk-pagination__item--block">
-    {%- elseif params.previous %}
-      <li class="govuk-pagination__item  govuk-pagination__item--prev">
-    {% endif -%}
+  <ul class="govuk-pagination__list">
     {%- if params.previous %}
-          <a class="govuk-pagination__link" href="{{ params.previous.href }}">
-              <svg class="govuk-pagination__icon" xmlns="http://www.w3.org/2000/svg" height="13" width="19" viewBox="0 0 19 13">
-                <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
-              </svg>
-              {%- if params.previous.text %}
-              {{ params.previous.text }}
-              {% else %}
-              Previous <span class="govuk-visually-hidden">page</span>
-              {% endif -%}
-              {%- if params.previous.description %}
-              <br><span class="govuk-!-font-size-16 govuk-!-padding-left-4">{{ params.previous.description }}</span>
-              {% endif -%}
-        </a>
-      </li>
+    <li class="govuk-pagination__item govuk-pagination__item--prev">
+      <a class="govuk-pagination__link" href="{{ params.previous.href }}">
+        <svg class="govuk-pagination__icon" xmlns="http://www.w3.org/2000/svg" height="13" width="19" viewBox="0 0 19 13">
+          <path d="m6.5938-0.0078125-6.7266 6.7266 6.7441 6.4062 1.377-1.449-4.1856-3.9768h12.896v-2h-12.984l4.2931-4.293-1.414-1.414z"></path>
+        </svg>
+        {%- if params.previous.text %}
+        {{ params.previous.text }}
+        {% else %}
+        Previous <span class="govuk-visually-hidden">page</span>
+        {% endif -%}
+        {%- if params.previous.label %}
+        <span class="govuk-pagination__link-divider govuk-visually-hidden">:</span>
+        <span class="govuk-pagination__link-label">{{ params.previous.label }}</span>
+        {% endif -%}
+      </a>
+    </li>
     {% endif -%}
 
     {%- for item in params.items %}
-      {%- if item.type == 'elipses' %}
-        <li class="govuk-pagination__item govuk-pagination__item--elipses">&hellip;</li>
-      {% else %}
-        {%- if item.selected %}
-          <li class="govuk-pagination__item govuk-pagination__item--active"><span class="govuk-visually-hidden">Page </span>{{ item.text }}<span class="govuk-visually-hidden"> (current page) </span></li>
-        {% else %}
-          <li class="govuk-pagination__item"><a class="govuk-pagination__link" href="{{ item.href }}"><span class="govuk-visually-hidden">Page </span>{{ item.text }}</a></li>
-        {% endif -%}
-      {% endif -%}
+    {%- if item.type == 'elipses' %}
+    <li class="govuk-pagination__item govuk-pagination__item--elipses">&hellip;</li>
+    {% else %}
+    {%- if item.selected %}
+    <li class="govuk-pagination__item govuk-pagination__item--active"><span class="govuk-visually-hidden">Page </span>{{ item.text }}<span class="govuk-visually-hidden"> (current page) </span></li>
+    {% else %}
+    <li class="govuk-pagination__item"><a class="govuk-pagination__link" href="{{ item.href }}"><span class="govuk-visually-hidden">Page </span>{{ item.text }}</a></li>
+    {% endif -%}
+    {% endif -%}
     {% endfor -%}
 
-    {%- if params.next and params.next.description %}
-      <li class="govuk-pagination__item  govuk-pagination__item--next govuk-pagination__item--block">
-        <a class="govuk-pagination__link" href="{{ params.next.href }}">
-          <svg class="govuk-pagination__icon" xmlns="http://www.w3.org/2000/svg" height="13" width="19" viewBox="0 0 15 13">
-            <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
-          </svg>
-          {%- if params.next.text %}
-          {{ params.next.text }}
-          {% else %}
-          Next <span class="govuk-visually-hidden">page</span>
-          {% endif -%}
-          <br><span class="govuk-!-font-size-16 govuk-!-padding-left-4">{{ params.next.description }}</span>
-        </a>
-      </li>
-    {%- elseif params.next %}
-      <li class="govuk-pagination__item  govuk-pagination__item--next">
-        <a class="govuk-pagination__link" href="{{ params.next.href }}">
-          {%- if params.next.text %}
-          {{ params.next.text }}
-          {% else %}
-          Next <span class="govuk-visually-hidden">page</span>
-          {% endif -%}
-          <svg class="govuk-pagination__icon" xmlns="http://www.w3.org/2000/svg" height="13" width="19" viewBox="0 0 15 13">
-            <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
-          </svg>
-        </a>
-      </li>
+    {%- if params.next %}
+    <li class="govuk-pagination__item govuk-pagination__item--next">
+      <a class="govuk-pagination__link" href="{{ params.next.href }}">
+        <svg class="govuk-pagination__icon" xmlns="http://www.w3.org/2000/svg" height="13" width="19" viewBox="0 0 15 13">
+          <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
+        </svg>
+        {%- if params.next.text %}
+        {{ params.next.text }}
+        {% else %}
+        Next <span class="govuk-visually-hidden">page</span>
+        {% endif -%}
+        {%- if params.next.label %}
+        <span class="govuk-pagination__link-divider govuk-visually-hidden">:</span>
+        <span class="govuk-pagination__link-label">{{ params.next.label }}</span>
+        {% endif -%}
+      </a>
+    </li>
     {% endif -%}
   </ul>
 
   {%- if params.results %}
-    <p class="govuk-pagination__results">Showing <b>{{ params.results.from }}</b> to <b>{{ params.results.to }}</b> of <b>{{params.results.count}}</b> {{type}}</p>
+  <p class="govuk-pagination__results">Showing <b>{{ params.results.from }}</b> to <b>{{ params.results.to }}</b> of <b>{{params.results.count}}</b> {{type}}</p>
   {% endif -%}
 
 </nav>
